--- a/src/whisper_api/frontend/static/styles.css
+++ b/src/whisper_api/frontend/static/styles.css
@@ -4,6 +4,13 @@ body {
   background-color: #f5faff;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 95vh;
+}
+
+footer {
+  margin-top: auto;
 }
 
 .container {
