--- a/src/whisper_api/frontend/static/styles.css
+++ b/src/whisper_api/frontend/static/styles.css
@@ -78,6 +78,10 @@ button[type="button"]:hover {
   margin-bottom: 20px;
 }
 
+#downloadSrtBtn {
+  display: none;
+}
+
 #resultContainer {
   background-color: #f9f9f9;
 }
